--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "postgre-test",
+  "name": "cellswiper",
   "version": "1.0.0",
-  "description": "Postgre Testing app",
+  "description": "An Image Annotation Service",
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "jimp": "^0.2.27",
+    "openseadragon": "^2.2.1",
+    "openseadragon-annotations": "^1.0.2",
     "pg": "^6.1.2",
-    "pg-promise": "^5.5.6"
+    "pg-promise": "^5.5.6",
+    "sharp": "^0.17.3"
   }
 }
