--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "cellswiper",
   "version": "1.0.0",
   "description": "An Image Annotation Service",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zakattak/CellSwiper"
+  },
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
@@ -10,6 +15,7 @@
     "openseadragon-annotations": "^1.0.2",
     "pg": "^6.1.2",
     "pg-promise": "^5.5.6",
-    "sharp": "^0.11.3"
+    "sharp": "^0.11.3",
+    "walk": "^2.3.9"
   }
 }
