--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "fs-promise": "^2.0.2",
     "jimp": "^0.2.27",
     "openseadragon": "^2.2.1",
     "openseadragon-annotations": "^1.0.2",
