--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openseadragon-annotations": "^1.0.2",
     "pg": "^6.1.2",
     "pg-promise": "^5.5.6",
+    "phash-image": "^3.5.0",
     "sharp": "^0.11.3",
     "walk": "^2.3.9"
   }
