--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "fs-promise": "^2.0.2",
     "jimp": "^0.2.27",
     "json2csv": "^3.7.3",
+    "node": "^7.9.0",
     "openseadragon": "^2.2.1",
     "openseadragon-annotations": "^1.0.2",
     "pg": "^6.1.2",
     "pg-promise": "^5.5.6",
     "phash-image": "^3.5.0",
-    "sharp": "^0.11.3",
+    "sharp": "^0.11.4",
     "walk": "^2.3.9"
   }
 }
